# WildSeedAutonomy

./: .env.example  .gitignore  README.md  bench_fps_v2.py  bench_fps_v3.py  probe_calib.py  probe_cam_only_v3.py  probe_cam_v2.py  probe_imu.py  probe_mono_formats.py  probe_sync.py  probe_sync_v2.py  requirements.txt
docker/: Dockerfile.fusion  Dockerfile.kissicp  Dockerfile.openvins  Dockerfile.sim  compose.yaml  cyclonedds.xml
docs/: PLAN-wildseed-s-series.tmp.md  PLAN.md  README.md  costmap-deep-dive.md  gps-fusion-conventions.md  headless-gui.md  kiss-icp-failure-modes.md  m3-vio.md  m4-lio.md  nav-n1-teleop.md  oak-d-lite-guide.md  operations.md  sim-debugging-notes.md  status-and-testing.md  wildseed-worlds.md
results/: bare_fine.sdf  bare_world.sdf  gps_denied_keystone.csv  gps_denied_verify.csv  gps_denied_wildseed.csv  m3_bare_ego.csv  m3_bare_gt.csv  m3_bare_ov.csv  m3_bare_r2_vio.csv  m3_bare_vio.csv  m3_ego.csv  m3_gt.csv  m3_ov.csv  m3_pipe_ctrl_vio.csv  m3_recipe_r2_vio.csv  m3_recipe_v2_ego.csv  m3_recipe_v2_gt.csv  m3_recipe_v2_ov.csv  m3_recipe_v2_vio.csv  m3_verify_ego.csv  m3_verify_gt.csv  m3_verify_ov.csv  m3_verify_vio.csv  m3_vio.csv  m3_vio_metrics.csv  m4_bare_ego.csv  m4_bare_gt.csv  m4_bare_kiss.csv  m4_bare_lio.csv  m4_bare_lio_metrics.csv  m4_bare_ov.csv  m4_ego.csv  m4_fast_lio.csv  m4_fast_lio_metrics.csv  m4_gt.csv  m4_kiss.csv  m4_lio.csv  m4_lio_metrics.csv  m4_ov.csv  m4_recipe_ego.csv  (+58 more)
ros2_ws/src/ego_localizer/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ego_localizer/config/: ego_localizer.yaml  ego_localizer_gnss.yaml  ego_localizer_lidar.yaml  ego_localizer_visual.yaml
ros2_ws/src/ego_localizer/ego_localizer/: __init__.py  estimator.py  node.py
ros2_ws/src/ego_localizer/launch/: ego_localizer.launch.py  ego_localizer_gnss.launch.py  ego_localizer_lidar.launch.py  ego_localizer_visual.launch.py
ros2_ws/src/ego_localizer/test/: test_estimator.py
ros2_ws/src/eval_tools/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/eval_tools/eval_tools/: __init__.py  evaluate.py  metrics.py
ros2_ws/src/eval_tools/test/: test_metrics.py
ros2_ws/src/fusion_core/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/fusion_core/fusion_core/: __init__.py  ekf.py  factor_graph.py  models.py
ros2_ws/src/fusion_core/test/: test_ekf.py  test_factor_graph.py  test_models.py
ros2_ws/src/gz_lidar_timestamp/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/gz_lidar_timestamp/config/: params.yaml
ros2_ws/src/gz_lidar_timestamp/gz_lidar_timestamp/: timestamp_injector.py
ros2_ws/src/gz_lidar_timestamp/launch/: timestamp_injector.launch.py
ros2_ws/src/sensing_bringup/config/: husky.rviz  robot.yaml
ros2_ws/src/sensing_bringup/config/openvins/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ros2_ws/src/sensing_bringup/launch/: husky_sim.launch.py
ros2_ws/src/sensing_bringup/scripts/: cloud_decimator.py  image_guard.py  m3_smoke.py  m4_smoke.py
ros2_ws/src/sensing_bringup/worlds/: smoke.sdf
scripts/: bench_rtf.sh  capture_bare.py  capture_fine.py  check_host.sh  check_sim_texture.py  clear_drive_lane.py  demo_n1_teleop.sh  deploy.sh  diag_sim.sh  expt_gz_ros2_control.sh  gps_denied_demo.py  m3_vio_demo.py  m4_lio_demo.py  m4_lio_eval.sh  m5_keystone_eval.sh  m6_ab_benchmark.py  move_test.py  multicam_logger.py  multicam_snap.py  n1_drive.py  n1_worker.sh  peek_cam.py  plot_gps_denied.py  plot_m4_sweep.py  plot_s1_texture_ab.py  plot_trajectory.py  prepare_wildseed_world.sh  remote.sh  rotate_full.py  rotate_stamped.py  s1_corner_log.py  step_capture.py  tune_world_bundle.sh  twocam_phase.py  yaw_logger.py  yaw_sweep.py
