<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ego_localizer</name>
  <version>0.1.0</version>
  <description>
    Ego-pose EKF node: wraps fusion_core to fuse the spine IMU + wheel/lidar/
    visual odometry (+ GNSS later) into a single nav_msgs/Odometry. M3 foundation;
    sensor-agnostic by design — add a frontend = add a subscription, not new
    filter code. See PLAN §5/§5.1 and milestone 3.
  </description>
  <maintainer email="ricardo.azambuja@gmail.com">Ricardo de Azambuja</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>fusion_core</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
