<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eval_tools</name>
  <version>0.1.0</version>
  <description>
    ROS-free trajectory evaluation: ATE/RPE with Umeyama alignment + chart
    generation (the milestone money charts). Reusable across the dataset/sim
    milestones. See PLAN §6 and milestone 3+.
  </description>
  <maintainer email="ricardo.azambuja@gmail.com">Ricardo de Azambuja</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
