<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_core</name>
  <version>0.1.0</version>
  <description>
    ROS-free estimation library (EKF predict/update + covariance, numpy only)
    shared by the fusion nodes. ego_localizer and object_tracker wrap it with
    different state vectors and measurement models. Unit-tested with pytest.
    See PLAN §5/§6 and milestone 2.
  </description>
  <maintainer email="ricardo.azambuja@gmail.com">Ricardo de Azambuja</maintainer>
  <license>Apache-2.0</license>

  <!-- Deliberately NO rclpy / ROS message deps — this package is ROS-free. -->
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
